# gps_navigation

./: .gitignore  README.md
route_msgs/: CMakeLists.txt  package.xml
route_msgs/action/: RouteToPose.action
route_msgs/msg/: .Node.msg.swp  DetectionRange.msg  DriveBreak.msg  DriveState.msg  Link.msg  Log.msg  Node.msg  Path.msg  Position.msg
route_tracker/: CMakeLists.txt  package.xml
route_tracker/include/code/: kec_car_data.hpp  kec_driving_data_code.hpp
route_tracker/include/common/: constants.hpp  data_type_trans.hpp  ros_parameter.hpp  test.h
route_tracker/include/entity/: car.hpp  constants.hpp  gps_data.hpp  kec_car_data.hpp  ros_parameter.hpp  task.hpp
route_tracker/include/math/: car_behavior.hpp  degree_convert.hpp  distance.hpp  geo_trans.hpp  imu_convert.hpp
route_tracker/include/route_tracker/: center.hpp
route_tracker/launch/: route_tracker_launch.py
route_tracker/param/: kec_route_tracker.yaml
route_tracker/src/: .center.cpp.swp  center.cpp  main.cpp
route_tracker/src/entity/: car.cpp  gps_data.cpp  task.cpp
route_tracker/src/math/: car_behavior.cpp  degree_convert.cpp  distance.cpp  imu_convert.cpp
test/: eular_pub.sh  goal.sh  recovery.sh  straight_goal.sh  straight_test.sh  turn_goal.sh  turn_goal_back.sh  ublox_test.sh
test/brake_test/: CMakeLists.txt  package.xml
test/brake_test/src/: main.cpp
